--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -124,13 +124,65 @@
             max-width: 100%;
             display: flex;
             justify-content: space-between;
+            position: relative;
+            bottom: 0;
+        }
+        &_overlayform{
+            display: none;
+            position: fixed;
+            background-color: $white;
+            box-shadow: $shadow2;
+            border-radius: 0.5rem;
+            top: 4.5rem;
+            width: 50%;
+            height: 80vh;
+            left: 50%;
+            transform: translate(-50%);
+            padding: 1rem 0.5rem;
+            z-index: 99;
+            @include breakpoint-down(medium) {
+                width: 95%;
+            }
+            form{
+                overflow-y: auto;
+                overflow-x: auto;
+                height: 90%;
+                padding: 1rem;
+                padding-bottom: 2rem;
+            }
+            &_cross{
+                position: absolute;
+                display: block;
+                text-align: center;
+                height: 2rem;
+                width: 2rem;
+                top: 0.5rem;
+                border-radius: 50%;
+                right: 0.5rem;
+                font-size: 1.5rem;
+                font-weight: bolder;
+                color: $lightPurple;
+                background-color: $white;
+                box-shadow: $shadow8;
+                transition: all 0.2s ease-in-out;
+                &:hover{
+                    background-color: $lightPurple;
+                    color: $white;
+                }
+                &:active{
+                    transform: scale(0.90);
+                }
+            }
         }
     }
     &__form-section{
         padding-top: 1rem;
-        position: relative;
         width: 100%;
+        min-height: 60vh;
     }
+}
+#finalMsg{
+    display: none;
 }
 .grey-container{
     height: 100%;
