--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -180,8 +180,26 @@ button,
 
 .delete-button {
   background-image: $redButton;
+  &_with-img{
+    border-radius: 50%;
+    height: 2.5rem;
+    width: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+      background-color: $lightBlue;
+      img{
+        filter: sepia(1);
+      }
+    }
+    img{
+      display: block;
+      max-width: 70%;
+      height: auto;
+    }
+  }
 }
-
 .edit-button {
   background-image: linear-gradient(to right,
       $darkBlue 0%,
@@ -220,7 +238,14 @@ button,
     left: 1.2rem;
   }
 }
-
+.float-equally{
+  top: 0;
+  right: 0;
+  @include breakpoint-down(medium) {
+    position: static;
+    margin: 0 auto 0.5rem auto;
+  }
+}
 .round-single-button {
   border-radius: 50%;
   font-size: 2.5rem;
