--- a/WebContent/app/css/style.css
+++ b/WebContent/app/css/style.css
@@ -520,6 +520,25 @@ button:active,
 .delete-button {
   background-image: linear-gradient(90deg, red 0%, #f76363 50%, red 100%);
 }
+.delete-button_with-img {
+  border-radius: 50%;
+  height: 2.5rem;
+  width: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.delete-button_with-img:hover {
+  background-color: #d7e3f5;
+}
+.delete-button_with-img:hover img {
+  filter: sepia(1);
+}
+.delete-button_with-img img {
+  display: block;
+  max-width: 70%;
+  height: auto;
+}
 
 .edit-button {
   background-image: linear-gradient(to right, #23049d 0%, #233e8b 50%, #23049d 100%);
@@ -552,6 +571,17 @@ button:active,
   .float-right-btn {
     right: auto;
     left: 1.2rem;
+  }
+}
+
+.float-equally {
+  top: 0;
+  right: 0;
+}
+@media (max-width: 59.9375em) {
+  .float-equally {
+    position: static;
+    margin: 0 auto 0.5rem auto;
   }
 }
 
@@ -2096,6 +2126,7 @@ tbody tr:nth-child(even) {
   flex: 1;
   min-height: 88vh;
   margin: 1.5rem 3rem;
+  position: relative;
 }
 @media (max-width: 59.9375em) {
   .main {
@@ -2122,11 +2153,12 @@ tbody tr:nth-child(even) {
 }
 .main__heading {
   font-size: 1.5rem;
+  width: 100%;
+  text-align: left;
 }
 @media (max-width: 59.9375em) {
   .main__heading {
     padding: 1rem;
-    width: 100%;
     text-align: center;
   }
 }
@@ -2186,6 +2218,9 @@ tbody tr:nth-child(even) {
     width: 100%;
     padding: 1rem;
   }
+}
+.main__form-container_wider {
+  width: 100%;
 }
 .main__form-container_shadowed {
   background-color: #fff;
@@ -2266,6 +2301,65 @@ tbody tr:nth-child(even) {
   padding-top: 1rem;
   width: 100%;
   min-height: 60vh;
+}
+.main__notifications-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 1rem;
+  width: 100%;
+}
+.main__notification, .main__notification_header {
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  margin-bottom: 1rem;
+}
+.main__notification_left, .main__notification_header_left {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.main__notification_left .check-container, .main__notification_header_left .check-container {
+  display: block;
+  top: -0.4rem;
+  padding-right: 1rem;
+}
+.main__notification_middle, .main__notification_header_middle {
+  flex: 8;
+  font-size: 1rem;
+}
+@media (max-width: 59.9375em) {
+  .main__notification_middle, .main__notification_header_middle {
+    font-size: 0.9rem;
+  }
+}
+.main__notification_middle a, .main__notification_header_middle a {
+  color: #222;
+}
+.main__notification_right, .main__notification_header_right {
+  flex: 2;
+}
+@media (max-width: 59.9375em) {
+  .main__notification_right, .main__notification_header_right {
+    text-align: end;
+    font-size: 0.8rem;
+    flex: none;
+    margin-top: 0.5rem;
+    width: 100%;
+  }
+}
+.main__notification_header .main__notification_middle {
+  display: flex;
+  flex-flow: row wrap;
 }
 
 #finalMsg {
