--- a/WebContent/app/css/_adminSideBar.scss
+++ b/WebContent/app/css/_adminSideBar.scss
@@ -136,4 +136,20 @@
       }
     }
   }
+  &__dot{
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    background: $yellowish;
+    color: $darkBlue;
+    border-radius: 50%;
+    font-size: 0.7rem;
+    text-align: center;
+    font-weight: bolder;
+    display: none;
+    &_outter{
+      height: 0.6rem;
+      width: 0.6rem;
+    }
+  }
 }
