--- a/WebContent/app/css/_animations.scss
+++ b/WebContent/app/css/_animations.scss
@@ -204,3 +204,19 @@
     opacity: 0;
   }
 }
+@keyframes grow{
+  from{
+    max-height: 0;
+  }
+  to{
+    max-height: 70vh;
+  }
+}
+@keyframes flip {
+  from{
+    transform: rotate(90deg);
+  }
+  to{
+    transform: rotate(270deg);
+  }
+}
