--- a/WebContent/app/css/_animations.scss
+++ b/WebContent/app/css/_animations.scss
@@ -212,6 +212,14 @@
     max-height: 70vh;
   }
 }
+@keyframes shrink {
+  from{
+    max-height: 70vh;
+  }
+  to{
+    max-height: 0;
+  }
+}
 @keyframes flip {
   from{
     transform: rotate(90deg);
