--- a/WebContent/app/css/_search.scss
+++ b/WebContent/app/css/_search.scss
@@ -14,7 +14,6 @@
                 flex-flow: column-reverse wrap;
             }
         }
-
     }
     &__selector,&__check{
         border: 1.5px solid $lightBlue;
@@ -67,10 +66,10 @@
             top: 3.4rem;
             left: 0;
             background-color: $white;
-            box-shadow: $shadow1;
+            box-shadow: $shadow5;
+            overflow-y: auto;
         }
         &_courses,&_durations,&_subjects{
-            overflow: hidden;
             transition: max-height 3s ease-in-out;
             max-height: 0;
             width: 100%;
@@ -106,8 +105,9 @@
             justify-content: space-between;
             flex-flow: row wrap;
             background-color: $white;
-            box-shadow: $shadow1;
+            box-shadow: $shadow5;
             padding: 0 1rem;
+            transition: all 0.2s ease-in-out;
             .check-container{
                 font-size: 1rem;
                 width: 45%;
@@ -115,14 +115,14 @@
                 margin-top: 0.5rem;
             }
             .check{
-                height: 1.1rem;
-                width: 1.1rem;
+                height: 1.5rem;
+                width: 1.5rem;
                 margin: 0;
                 &::after{
                     top: 0;
-                    left: 0.2rem;
-                    height: 0.85rem;
-                    width: 0.45rem;
+                    left: 0.4rem;
+                    height: 1rem;
+                    width: 0.5rem;
                 }
             }
         }
@@ -224,5 +224,4 @@
             flex: 3;
         }
     }
-
 }
