--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -270,6 +270,8 @@ button,
   background-color: transparent;
   border: 1.5px solid $darkBlue;
   box-shadow: none;
+  font-size: 1rem;
+  font-family: inherit;
   &:hover{
     box-shadow: none;
   }
@@ -1235,6 +1237,28 @@ tbody tr:nth-child(even) {
   width: 100%;
   overflow-x: auto;
 }
+.location_icon{
+  box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: 5px solid $lightPurple;
+    border-radius: 100%;
+    z-index: 0;
+    &::after{
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin: 1px 0 0 -6px;
+    display: block;
+    content: '';
+    border: 6px solid transparent;
+    border-top: 10px solid $lightPurple;
+    border-bottom: none;
+    }
+}
+
 
 .reveal {
   animation: reveal ease-in-out 0.3s forwards;
