--- a/WebContent/app/css/_search.scss
+++ b/WebContent/app/css/_search.scss
@@ -215,12 +215,18 @@
             padding-top: 0;
             &_name{
                 font-size: 1.5rem;
+                line-height: 0;
+            }
+            &_info{
+                margin-bottom: 1rem;
             }
             &_sub-heading{
+                padding-top: 0.5rem;
                 font-weight: bold;
+                line-height: 0;
             }
         }
-        &_availbality{
+        &_availability{
             flex: 3;
         }
     }
