--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -195,6 +195,7 @@
     &__notification,&__notification_header{
         width: 100%;
         background-color: $white;
+        box-shadow: $shadow5;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
