--- a/WebContent/app/css/_globals.scss
+++ b/WebContent/app/css/_globals.scss
@@ -272,6 +272,7 @@ button,
   box-shadow: none;
   font-size: 1rem;
   font-family: inherit;
+  width: 100%;
   &:hover{
     box-shadow: none;
   }
@@ -1238,14 +1239,12 @@ tbody tr:nth-child(even) {
   overflow-x: auto;
 }
 .location_icon{
-  box-sizing: border-box;
     position: relative;
     display: inline-block;
     width: 16px;
     height: 16px;
     border: 5px solid $lightPurple;
     border-radius: 100%;
-    z-index: 0;
     &::after{
     position: absolute;
     top: 100%;
@@ -1298,6 +1297,9 @@ tbody tr:nth-child(even) {
 
 .grow{
   animation: grow ease-in-out 0.4s forwards;
+}
+.grow-limitless{
+  animation: grow-limitless ease-in-out 0.4s forwards;
 }
 .flip{
   &::after{
