--- a/WebContent/app/css/_main.scss
+++ b/WebContent/app/css/_main.scss
@@ -263,8 +263,29 @@
         flex-flow: row wrap;
         justify-content: space-between; 
         align-items: flex-start;  
+        align-content: flex-start;
         height: max-content;
         min-height: 75vh;
+        .table-wrapper{
+            width: 100%;
+            margin-top: 2rem;
+            box-shadow: $shadow5;
+            background-color: $white;
+            padding: 1rem;
+            border-radius: 0.4rem;
+        }
+        table{
+            padding: 1rem;
+            box-shadow:none;
+            width: 100%;
+            tbody{      
+                width: 100%;      
+                tr{
+                    background: $white;
+                    margin: 0.5rem 0;
+                }
+            }
+        }
     }
     &__big-tile{
         width: 48%;
@@ -273,6 +294,7 @@
         min-height: 15rem;
         padding: 1rem;
         box-shadow: $shadow1;
+        margin-top: 2rem;
         border-radius: 0.4rem;
         p{
             text-align: center;
@@ -318,6 +340,53 @@
                 text-align: center;
             }
         }
+    }
+    &__wallet{
+        &__tile{
+        width: 100%;
+        .main__tile_img{
+            width: 4rem;
+            flex: none;
+            margin: 1rem;
+            margin-right: 0;
+            padding: 0.5rem;
+            background-color: $lightBlue;
+        }
+        &_balance{
+            width: 10rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        &_title,&_num{
+            width: 100%;
+            display: block;
+            text-align: left;
+            padding-left: 1rem;
+        }
+        &_num{
+            font-size: 1.4rem;
+            font-weight: bold;
+        }
+        &_btnunit{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: max-content;
+            margin-left: 1rem;
+            label{
+                padding: 0 1rem 0 0.5rem;
+                cursor: pointer;
+                color: $darkBlue;
+            }
+            button{
+                height: 3rem;
+                width: 3rem;
+            }
+        }
+
+    }
     }
 }
 #finalMsg{
